--- a/src/components/Main/Category/Category.css
+++ b/src/components/Main/Category/Category.css
@@ -3,16 +3,18 @@
 .category__content {
   display: flex;
   justify-content: space-between;
+}
+
+.category__content ul li button {
+  transition: all 0.3s linear;
   color: #3e3e3e;
   font-size: 13px;
   font-family: Geometria;
   font-weight: 500;
-}
+  cursor: pointer;
 
-.category__content ul li {
-  transition: all 0.3s linear;
 }
-.category__content ul li:hover {
+.category__content ul li button:hover {
   color: transparent;
   -webkit-background-clip: text;
   background-clip: text;
@@ -37,7 +39,6 @@
 .category__middle ul li {
   margin-left: 50px;
   margin-bottom: 10px;
-  cursor: pointer;
 }
 .category__right {
   width: 48%;
@@ -92,7 +93,7 @@
 
 /* *********************************  max-width: 768px  *************************************** */
 @media (max-width: 768px) {
-  .category__content ul li {
+  .category__content ul li button {
     font-size: 12px;
   }
 
@@ -106,12 +107,10 @@
   .category__right {
     display: none;
   }
-    .category__left {
+  .category__left {
     width: 45%;
   }
   .category__middle {
     width: 45%;
   }
-
-
 }
