--- a/src/components/Main/Logo/Logo.css
+++ b/src/components/Main/Logo/Logo.css
@@ -47,3 +47,27 @@
   align-items: center;
   padding: 10px 0;
 }
+
+/* *********************************  max-width: 992px  *************************************** */
+@media (max-width: 992px) {
+  .logo__container {
+    padding: 0px 30px;
+  }
+}
+
+/* *********************************  max-width: 575px  *************************************** */
+.logo__container.mobile {
+  display: none;
+}
+@media (max-width: 575px) {
+  .logo__container {
+    padding: 0px 20px;
+  }
+
+  .logo__container.desktop {
+    display: none;
+  }
+  .logo__container.mobile {
+    display: block;
+  }
+}
