--- a/src/components/Main/Products/Products.css
+++ b/src/components/Main/Products/Products.css
@@ -268,6 +268,7 @@
 .product__sorting--mobile {
   display: none;
 }
+
 @media (max-width: 768px) {
   .products__title h2 {
     text-align: center;
@@ -283,6 +284,8 @@
   .product__item--content {
     padding: 5px;
   }
+}
+@media (min-width: 575px) and (max-width: 768px) {
   .product__item {
     width: 200px;
   }
@@ -305,10 +308,40 @@
   }
 }
 
-/* *********************************  max-width: 768px  *************************************** */
+/* *********************************  max-width: 575px  *************************************** */
 
-@media (max-width: 575px) {
-  .products__container {
-    padding: 10px 20px;
+/* @media (max-width: 575px) {
+ 
+
+  .product__item {
+    width: 270px;
+  }
+  .product__img {
+    width: 270px;
+    height: 150px;
+  }
+  .product__name {
+    font-size: 12px;
+  }
+  .product__cart-button {
+    padding: 8px 35px;
   }
 }
+ */
+/* *********************************  max-width: 450px  *************************************** */
+
+/* @media (max-width: 450px) {
+  .product__item {
+    width: 270px;
+  }
+  .product__img {
+    width: 270px;
+    height: 150px;
+  }
+  .product__name {
+    font-size: 12px;
+  }
+  .product__cart-button {
+    padding: 8px 30px;
+  }
+} */
