--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@ body::-webkit-scrollbar-thumb {
   );
 }
 body::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
   /* border-radius: 10px; */
   background-color: #f9f9fd;
 }
