--- a/src/pages/Compare/Compare.css
+++ b/src/pages/Compare/Compare.css
@@ -95,7 +95,8 @@
 .compare__item {
 }
 .compare__item--card {
-  padding: 20px;
+  height: 300px;
+  padding: 15px;
   max-width: 300px;
   font-family: Geometria;
   font-weight: 500;
@@ -113,6 +114,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  font-size: 18px;
 }
 .compare__item:first-child .compare__item--field {
   background-color: #c9c1c1;
@@ -138,7 +140,7 @@
 
 .compare__item--card:first-child {
   background-color: #ffffff;
-  height: 250px;
+  /* height: 250px; */
 }
 /* .compare__left .compare__item--card:first-child {
   background-color: #c9c1c1;
@@ -151,10 +153,13 @@
 } */
 .compare__img {
   width: 200px;
+  height: 130px;
   margin: 0 auto;
 }
 .compare__img img {
   width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 
 .compare__item--content {
@@ -185,6 +190,14 @@
     rgba(170, 39, 39, 1) 100%
   );
   margin-right: 12px;
+}
+
+.compare__bin {
+  width: 25px;
+  margin: 0 auto;
+}
+.compare__bin img {
+  width: 100%;
 }
 
 .compare__empty h2 {
@@ -236,14 +249,17 @@
   .compare__container {
     padding: 150px 20px 80px 20px;
   }
-  .compare__item--card:first-child {
-    height: 230px;
+  /* .compare__item--card:first-child {
+    height: 300px;
+  } */
+  .compare__item--card {
+    height: 250px;
   }
   .compare__item--card {
     padding: 10px;
   }
   .compare__item:first-child .compare__item--card {
-    font-size: 12px;
+    font-size: 16px;
   }
   .compare__item--field {
     padding: 10px;
@@ -251,6 +267,7 @@
   }
   .compare__img {
     width: 150px;
+    height: 90px;
   }
 }
 /* *********************************  max-width: 575px  *************************************** */
@@ -258,9 +275,9 @@
   .compare__title h2 span {
     font-size: 18px;
   }
-  .compare__item--card:first-child {
+  /* .compare__item--card:first-child {
     height: 210px;
-  }
+  } */
   .compare__name {
     font-size: 12px;
   }
@@ -273,11 +290,13 @@
 
 .compare__content::-webkit-scrollbar {
   width: 2px;
+  height: 2px;
 }
 
 .compare__content::-webkit-scrollbar-track {
   background: #dddbdb;
   width: 2px;
+  height: 2px;
 }
 
 .compare__content::-webkit-scrollbar-thumb {
@@ -288,4 +307,5 @@
     rgba(170, 39, 75, 1) 100%
   );
   width: 2px;
+  height: 2px;
 }
