--- a/src/pages/CategoriesPage/CategoriesPage.css
+++ b/src/pages/CategoriesPage/CategoriesPage.css
@@ -218,12 +218,20 @@
   .categoriesPage__sorting {
     display: none;
   }
+
+  .categoriesPage__sorting ul li {
+    font-size: 10px;
+  }
   .categoriesPage__sorting--mobile {
     display: block;
     text-align: center;
     margin-bottom: 50px;
   }
+  .categoriesPage__sorting--mobile--li {
+    font-size: 12px;
+  }
 }
+/* .................................................. */
 
 .categoriesPage__sorting-wrapper::-webkit-scrollbar {
   width: 0px;
@@ -248,4 +256,35 @@
   );
   /* width: 4px; */
   height: 2px;
+}
+
+/* ......................................................................... */
+
+.css-6hp17o-MuiList-root-MuiMenu-list {
+  overflow: scroll;
+}
+
+.css-1km1ehz {
+  overflow: scroll;
+}
+.categoriesPage__sorting--mobile
+  .css-kk1bwy-MuiButtonBase-root-MuiMenuItem-root {
+  font-size: 12px;
+}
+
+.css-6hp17o-MuiList-root-MuiMenu-list::-webkit-scrollbar {
+  width: 0px;
+  height: 0px;
+}
+
+.css-6hp17o-MuiList-root-MuiMenu-list::-webkit-scrollbar-track,
+.css-1km1ehz::-webkit-scrollbar-track {
+  width: 0px;
+  height: 0px;
+}
+
+.css-6hp17o-MuiList-root-MuiMenu-list::-webkit-scrollbar-thumb,
+.css-1km1ehz::-webkit-scrollbar-thumb {
+  width: 0px;
+  height: 0px;
 }
