--- a/src/pages/Checkout/Checkout.css
+++ b/src/pages/Checkout/Checkout.css
@@ -54,6 +54,11 @@
   background-color: unset;
   margin-top: 12px;
   margin-bottom: 10px;
+  padding: 3px;
+}
+.checkout--input-1 input {
+  width: 100%;
+  height: 100%;
 }
 .checkout--input-2 {
   display: block;
@@ -63,6 +68,11 @@
   background-color: unset;
   margin-top: 12px;
   margin-bottom: 10px;
+  padding: 3px;
+}
+.checkout--input-2 input {
+  width: 100%;
+  height: 100%;
 }
 .p-checkbox {
   display: flex;
@@ -121,6 +131,17 @@
   height: 100px;
   width: 100%;
   margin-bottom: 15px;
+}
+.checkout__textArea {
+  padding: 10px;
+  font-size: 14px;
+  font-family: Geometria;
+  font-weight: 500;
+  color: #2e2d2d;
+  width: 100%;
+  height: 100%;
+  border-style: none;
+  box-shadow: inset 0px 0px 4px rgb(0 0 0 / 25%);
 }
 
 .checkout__error {
