--- a/src/components/Main/Products/Products.css
+++ b/src/components/Main/Products/Products.css
@@ -239,7 +239,7 @@
 
 .loading--block {
   text-align: center;
-  margin: 20px 0;
+  margin: 30px ;
 }
 
 /* *********************************  MEDIA QUERY  ************************************* */
