--- a/src/pages/NewsDetail/NewsDetail.css
+++ b/src/pages/NewsDetail/NewsDetail.css
@@ -12,14 +12,7 @@
 }
 
 .newsDetail__title span {
-  color: transparent;
-  -webkit-background-clip: text;
-  background-clip: text;
-  background-image: linear-gradient(
-    90deg,
-    rgba(255, 72, 72, 1) 0%,
-    rgba(170, 39, 39, 1) 100%
-  );
+  color: rgb(209, 38, 38);
 
   font-family: Geometria;
   font-weight: 700;
