--- a/src/index.css
+++ b/src/index.css
@@ -69,11 +69,11 @@ input[type="radio"]:checked::before {
 input[type="text"],
 input[type="number"],
 input[type="email"],
-input[type="search"] {
+input[type="search"],
+input[type="password"] {
   padding-left: 10px;
   font-size: 14px;
   font-family: Geometria;
   font-weight: 500;
   color: #2e2d2d;
 }
-
