--- a/src/components/Main/Products/Products.css
+++ b/src/components/Main/Products/Products.css
@@ -153,6 +153,8 @@
   cursor: pointer;
   border-radius: 10px;
   transition: all 0.3s linear;
+
+  box-shadow: 0px 5px 10px rgba(244, 57, 57, 0.15);
 }
 .product__cart-button:hover {
   background: linear-gradient(
@@ -239,7 +241,7 @@
 
 .loading--block {
   text-align: center;
-  margin: 30px ;
+  margin: 30px;
 }
 
 /* *********************************  MEDIA QUERY  ************************************* */
