--- a/src/pages/CategoriesPage/CategoriesPage.css
+++ b/src/pages/CategoriesPage/CategoriesPage.css
@@ -47,8 +47,8 @@
   display: flex;
   /* margin-bottom: 40px; */
 }
-.categoriesPage__sorting ul li {
-  margin-right: 20px;
+.categoriesPage__sorting .categoriesPage__sorting--item {
+  /* margin-right: 20px; */
   font-size: 14px;
   font-weight: 500;
   color: #3f3d56;
@@ -56,8 +56,8 @@
   position: relative;
   white-space: nowrap;
 }
-.categoriesPage__sorting ul .active {
-  margin-right: 20px;
+.categoriesPage__sorting .active {
+  /* margin-right: 20px; */
   font-size: 14px;
   font-weight: 500;
 
@@ -71,7 +71,7 @@
   );
   cursor: pointer;
 }
-.categoriesPage__sorting ul .active::after {
+.categoriesPage__sorting .active::after {
   content: url("../../assets/images/new_design/red_dot.svg");
   display: block;
   position: absolute;
@@ -178,6 +178,15 @@
   padding: 3px 5px 1px;
 }
 
+.swiper-button-next,
+.swiper-button-prev {
+  color: rgb(170, 39, 39);
+}
+.swiper-button-next,
+.swiper-container-rtl .swiper-button-prev {
+  right: 0;
+}
+
 /* *********************************  MEDIA QUERY  ************************************* */
 
 /* *********************************  max-width: 1400px  *************************************** */
@@ -189,10 +198,18 @@
 }
 
 /* *********************************  max-width: 1200px  *************************************** */
-@media (max-width: 1400px) {
-  /* .categoriesPage__content{
-	  
-  } */
+.categoriesPage__sorting.bellow-1200 {
+  display: none;
+}
+@media (max-width: 1200px) {
+  .categoriesPage__sorting.above-1200 {
+    display: none;
+  }
+}
+@media (min-width: 768px) and (max-width: 1200px) {
+  .categoriesPage__sorting.bellow-1200 {
+    display: block;
+  }
 }
 
 /* *********************************  max-width: 992px  *************************************** */
