--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -243,7 +243,7 @@
 /* NavLink */
 
 .active {
-  color: #ff0000;
+  color: rgb(170, 39, 39);
 }
 
 /* *********************************  MEDIA QUERY  ************************************* */
