--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -70,15 +70,15 @@
   margin-right: 0;
 }
 .header__catalog {
-  width: 120px;
-  height: 35px;
+  width: 150px;
+  height: 40px;
   background: linear-gradient(
     90deg,
     rgba(255, 72, 72, 1) 0%,
     rgba(206, 53, 53, 1) 61%,
     rgba(170, 39, 75, 1) 100%
   );
-  font-size: 14px;
+  font-size: 16px;
   color: #fff;
   margin-top: 15px;
   display: flex;
@@ -95,8 +95,8 @@
 .header__catalog--icon {
   z-index: 5;
   position: relative;
-  width: 15px;
-  height: 11px;
+  width: 20px;
+  height: 15px;
   cursor: pointer;
   display: block;
 }
@@ -155,14 +155,36 @@
   justify-content: space-between;
   align-items: center;
 }
-.header__logo {
-  font-size: 36px;
-  color: #ff0000;
+/* .header__logo {
+  font-size: 28px;
+  color: rgb(209, 38, 38);
   font-family: Gilroy;
   font-weight: 800;
   margin-bottom: 5px;
   margin-left: 30px;
   cursor: pointer;
+} */
+.header__logo--item {
+  color: rgb(209, 38, 38);
+  font-family: Gilroy;
+  font-weight: 800;
+}
+.header__logo--item p {
+  display: flex;
+
+  flex-direction: column;
+  align-items: center;
+  justify-content: start;
+}
+
+.header__logo--item span {
+  font-size: 36px;
+  /* color: #ff0000; */
+  /* margin-bottom: 5px; */
+  /* margin-left: 30px; */
+  cursor: pointer;
+
+  line-height: 0.7;
 }
 .header__assets {
 }
@@ -462,9 +484,9 @@
 /* *********************************  max-width: 450px  *************************************** */
 
 @media (max-width: 450px) {
-  .header__logo {
+  /* .header__logo {
     font-size: 30px;
-  }
+  } */
   .header__mobile--middle {
     width: 120px;
   }
