--- a/src/components/Main/Banner/Banner.css
+++ b/src/components/Main/Banner/Banner.css
@@ -45,7 +45,7 @@
   /* position: absolute; */
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  /* object-fit: cover; */
 }
 .banner__btn {
   /* height: 100%; */
@@ -92,7 +92,7 @@
   /* position: absolute; */
   height: 100%;
   width: 100%;
-  object-fit: cover;
+  /* object-fit: cover; */
 }
 .banner__btn--right {
   padding: 20px;
@@ -130,6 +130,7 @@
 
 .banner__right img {
   width: 100%;
+  border-radius: 10px;
 }
 
 /* ...............................SWIPER ........................................*/
