--- a/src/components/Main/Category/Category.css
+++ b/src/components/Main/Category/Category.css
@@ -2,7 +2,7 @@
 
 .category__content {
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   height: 300px;
 }
 
@@ -14,20 +14,34 @@
   font-weight: 500;
   cursor: pointer;
   text-align: left;
+  width: 90%;
+  padding: 10px;
+  border-radius: 10px;
 }
 .category__content ul li button:hover {
-  color: transparent;
-  -webkit-background-clip: text;
-  background-clip: text;
-  background-image: linear-gradient(
-    90deg,
-    rgba(255, 72, 72, 1) 0%,
-    rgba(170, 39, 39, 1) 100%
-  );
+  color: rgb(209, 38, 38);
+  background-color: antiquewhite;
+}
+
+.category__middle ul li button {
+  padding: unset;
+  width: 100%;
+}
+.category__middle ul li button:hover {
+  color: rgb(209, 38, 38);
+  background-color: unset;
+}
+.category__middle .underSubcat--btn {
+  display: block;
+  margin-left: 30px;
+  margin: 5px 0 5px 30px;
+  font-size: 12px;
+  color: #5a6a77;
+  list-style-type: disc;
 }
 
 .category__left {
-  width: 26%;
+  width: 28%;
   border-right: 2px solid #e0e0e0;
   overflow: scroll;
 }
@@ -37,32 +51,32 @@
 }
 .category__left ul li .active_category {
   color: rgb(170, 39, 39);
-  
-
 }
 .category__middle {
-  width: 26%;
+  width: 28%;
   overflow: scroll;
 }
 .category__middle ul li {
   margin-left: 10px;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 .category__right {
-  width: 48%;
-  text-align: right;
-  padding-right: 30px;
+  width: 44%;
+  /* width: 26%; */
+  /* text-align: right; */
+  /* padding-right: 30px; */
+  display: flex;
 }
-
 .category__right--img {
-  max-width: 350px;
+  /* max-width: 350px; */
+  width: 80%;
   margin-left: auto;
 
   /* margin: 0 auto; */
 }
 .category__right--img img {
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
   border-radius: 10px;
   object-fit: cover;
 }
