--- a/src/pages/CategoriesPage/CategoriesPage.css
+++ b/src/pages/CategoriesPage/CategoriesPage.css
@@ -2,203 +2,125 @@
   max-width: 1440px;
   margin: 0 auto;
   padding: 150px 120px 130px 120px;
+  font-family: Geometria;
 }
 
 .categoriesPage .banner__left {
   width: 80%;
   margin: 0 auto;
 }
-
 .categoriesPage__title {
   margin-top: 40px;
   margin-bottom: 20px;
 }
-.categoriesPage__title h2 span {
-  font-size: 24px;
-  color: transparent;
-  -webkit-background-clip: text;
-  background-clip: text;
-  background-image: linear-gradient(
-    90deg,
-    rgba(255, 72, 72, 1) 0%,
-    rgba(170, 39, 39, 1) 100%
-  );
-
-  font-family: Geometria;
-  font-weight: 700;
-  margin-top: 50px;
-}
-.categoriesPage__sorting-wrapper {
-  width: 100%;
-  overflow-x: scroll;
-  margin-bottom: 50px;
-  background-color: #fff;
-}
-.categoriesPage__sorting {
-  /* display: inline-block; */
-  /* width: 100%; */
-  /* background-color: #fff; */
-  padding: 10px 30px;
-  border-radius: 10px;
-  box-shadow: 0px 10px 16px rgba(0, 0, 0, 0.05);
-}
-
-.categoriesPage__sorting {
-  /* display: flex; */
-  /* margin-bottom: 40px; */
-}
-.categoriesPage__sorting .categoriesPage__sorting--item {
-  /* margin-right: 20px; */
-  font-size: 14px;
-  font-weight: 500;
-  color: #3f3d56;
-  cursor: pointer;
-  position: relative;
-  white-space: nowrap;
-}
-.categoriesPage__sorting .categoriesPage__sorting--item:first-child {
-  padding-left: 20px;
-}
-.categoriesPage__sorting .categoriesPage__sorting--item:last-child {
-  padding-right: 20px;
-}
-.categoriesPage__sorting .active {
-  /* margin-right: 20px; */
-  font-size: 14px;
-  font-weight: 500;
-
-  color: transparent;
-  -webkit-background-clip: text;
-  background-clip: text;
-  background-image: linear-gradient(
-    90deg,
-    rgba(255, 72, 72, 1) 0%,
-    rgba(170, 39, 39, 1) 100%
-  );
-  cursor: pointer;
-}
-.categoriesPage__sorting .active::after {
-  content: url("../../assets/images/new_design/red_dot.svg");
-  display: block;
-  position: absolute;
-
-  transition: all 0.3s linear;
-  top: 13px;
-  left: 50%;
-  /* right: 50%; */
-}
-
-.categoriesPage--item:first-child {
-  background-color: #3f3d56;
-  color: #fff;
-  border: 0;
+.categoriesPage__title h1 {
+  color: rgb(209, 38, 38);
 }
 
 .categoriesPage__content {
+  width: 100%;
   display: flex;
   justify-content: flex-start;
-  gap: 20px;
+  gap: 3%;
   flex-wrap: wrap;
 }
 .categoriesPage__item {
-  max-width: 280px;
-  font-family: Geometria;
-  font-weight: 500;
-  color: #272626;
-  font-size: 14px;
-  margin-bottom: 40px;
-  border-radius: 5px;
-
-  background-color: #ffffff;
-  cursor: pointer;
-
+  width: 31%;
   filter: drop-shadow(0px 10px 16px rgba(0, 0, 0, 0.05));
-}
-.categoriesPage__img {
-  width: 280px;
-}
-.categoriesPage__img img {
-  width: 100%;
+  margin-bottom: 20px;
 }
 
-.categoriesPage__item--content {
-  padding: 20px;
-}
-.categoriesPage__name {
-  font-size: 14px;
-  font-weight: 500;
-  margin: 10px 0;
-  color: #3e3e3e;
-  /* text-align: center; */
-}
-.categoriesPage__price {
-  text-align: left;
-}
-
-.categoriesPage__price span:first-child {
-  font-size: 18px;
-  font-family: Gilroy;
-  font-weight: 900;
-  color: transparent;
-  -webkit-background-clip: text;
-  background-clip: text;
-  background-image: linear-gradient(
-    90deg,
-    rgba(255, 72, 72, 1) 0%,
-    rgba(170, 39, 39, 1) 100%
-  );
-  margin-right: 12px;
-}
-.categoriesPage__price span:last-child {
-  font-weight: 700;
-  color: #00a907;
-}
-
-.categoriesPage__buttons {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 35px;
-}
-.categoriesPage__cart-button {
-  padding: 8px 35px;
-
+.categoriesPage__item--top {
   background: linear-gradient(
     90deg,
     rgba(255, 72, 72, 1) 0%,
     rgba(206, 53, 53, 1) 61%,
     rgba(170, 39, 75, 1) 100%
   );
-  font-size: 14px;
+  text-align: center;
+  padding: 10px 20px 0;
+  height: 55px;
   color: #fff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  font-weight: 700;
+  font-size: 14px;
   cursor: pointer;
-  border-radius: 10px;
-}
-.categoriesPage__cart-button span {
-  margin-left: 15px;
-}
-.categoriesPage__compare-button {
-  border: 1px solid #aa2727;
-  border-radius: 10px;
-  padding: 3px 5px 1px;
-}
 
-/* =============  SWIPER  =============== */
-.swiper-wrapper {
-  /* justify-content: space-between; */
+  transition: all 0.3s ease-in-out;
 }
-.swiper-button-next,
-.swiper-button-prev {
-  color: rgb(170, 39, 39);
+.categoriesPage__item--top:hover {
+  background: linear-gradient(
+    90deg,
+    rgb(224, 25, 25) 0%,
+    rgb(168, 12, 12) 61%,
+    rgb(85, 13, 32) 100%
+  );
+
+  color: azure;
 }
-.swiper-button-next,
-.swiper-container-rtl .swiper-button-prev {
-  right: 0;
+.categoriesPage__item--bottom {
+  background-color: rgb(255, 255, 255);
+  padding: 10px 20px;
+  height: 250px;
+  overflow-y: scroll;
+  color: #3e3e3e;
+
+  position: relative;
+  z-index: 2;
 }
-.swiper-button-prev {
+.categoriesPage__bg {
+  bottom: 0;
+  height: 100%;
   left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 250px;
+  z-index: -1;
+}
+.categoriesPage__bg img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  opacity: 0.08;
+}
+.categoriesPage__item--bottom ul {
+  /* z-index: 10; */
+}
+.categoriesPage__item--bottom ul li {
+  /* margin-bottom: 5px; */
+  cursor: pointer;
+  z-index: 10;
+  transition: all 0.3 ease-in-out;
+  padding: 10px;
+  font-size: 14px;
+  border-radius: 10px;
+}
+.categoriesPage__item--bottom ul li:hover {
+  color: rgb(209, 38, 38);
+  background-color: antiquewhite;
+}
+/* .categoriesPage__item--bottom ul li {
+} */
+
+.categoriesPage__item--bottom::-webkit-scrollbar {
+  width: 2px;
+  background-color: rgb(255, 255, 255);
+}
+.categoriesPage__item--bottom::-webkit-scrollbar-thumb {
+  width: 2px;
+  /* border-radius: 5px; */
+  background: linear-gradient(
+    90deg,
+    rgba(255, 72, 72, 1) 0%,
+    rgba(206, 53, 53, 1) 61%,
+    rgba(170, 39, 75, 1) 100%
+  );
+}
+.categoriesPage__item--bottom::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.2);
+  /* border-radius: 10px; */
+  background-color: #f9f9fd;
 }
 
 /* *********************************  MEDIA QUERY  ************************************* */
@@ -211,94 +133,42 @@
   }
 }
 
-/* *********************************  max-width: 1200px  *************************************** */
-
-/* *********************************  max-width: 992px  *************************************** */
-@media (max-width: 992px) {
-  .categoriesPage__container {
-    max-width: 1440px;
-    padding: 150px 30px 80px 30px;
-  }
-}
 /* *********************************  max-width: 768px  *************************************** */
-.categoriesPage__sorting--mobile {
-  display: none;
-}
-
 @media (max-width: 768px) {
   .categoriesPage__container {
-    max-width: 1440px;
-    padding: 150px 20px 50px 20px;
+    padding: 150px 30px 50px;
   }
-  .categoriesPage__title h2 {
-    text-align: center;
+  .categoriesPage__item--top {
+    font-size: 11px;
+    padding: 10px 3px;
   }
-  .categoriesPage__sorting {
-    display: none;
+  .categoriesPage__item--bottom {
+    height: 150px;
+    padding: 10px 5px;
   }
 
-  .categoriesPage__sorting ul li {
+  .categoriesPage__item--bottom ul li {
     font-size: 10px;
+    padding: unset;
+    margin-bottom: 7px;
   }
-  .categoriesPage__sorting--mobile {
-    display: block;
-    text-align: center;
-    margin-bottom: 50px;
-  }
-  .categoriesPage__sorting--mobile--li {
-    font-size: 12px;
+  .categoriesPage__bg {
+    height: 150px;
   }
 }
-/* .................................................. */
 
-.categoriesPage__sorting-wrapper::-webkit-scrollbar {
-  width: 0px;
-  height: 2px;
+/* *********************************  max-width: 575px  *************************************** */
+@media (max-width: 575px) {
+  .categoriesPage__content {
+    justify-content: center;
+  }
+  .categoriesPage__item {
+    width: 48%;
+  }
 }
-
-.categoriesPage__sorting-wrapper::-webkit-scrollbar-track {
-  /* background: #ffffff; */
-
-  /* width: 4px; */
-  /* height: 4px; */
-}
-
-.categoriesPage__sorting-wrapper::-webkit-scrollbar-thumb {
-  /* background: #e0e0e0; */
-
-  background: linear-gradient(
-    90deg,
-    rgba(255, 72, 72, 1) 0%,
-    rgba(206, 53, 53, 1) 61%,
-    rgba(170, 39, 75, 1) 100%
-  );
-  /* width: 4px; */
-  height: 2px;
-}
-
-/* ......................................................................... */
-
-.css-6hp17o-MuiList-root-MuiMenu-list {
-  overflow: scroll;
-}
-
-.css-1km1ehz {
-  overflow: scroll;
-}
-
-.css-6hp17o-MuiList-root-MuiMenu-list::-webkit-scrollbar {
-  width: 0px;
-  height: 0px;
-}
-
-.css-6hp17o-MuiList-root-MuiMenu-list::-webkit-scrollbar-track,
-.css-1km1ehz::-webkit-scrollbar-track {
-  width: 0px;
-  height: 0px;
-}
-
-.css-6hp17o-MuiList-root-MuiMenu-list::-webkit-scrollbar-thumb,
-.css-1km1ehz::-webkit-scrollbar-thumb {
-  width: 0px;
-  height: 0px;
+/* *********************************  max-width: 420px  *************************************** */
+@media (max-width: 420px) {
+  .categoriesPage__item {
+    width: 90%;
+  }
 }
