--- a/src/pages/News/News.css
+++ b/src/pages/News/News.css
@@ -67,7 +67,9 @@
 .news__img img {
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  object-fit: cover;
+
+  border-radius: 15px;
 }
 /* .news h2 {
   margin: 50px 0 35px;
@@ -183,6 +185,7 @@
   }
   .news__img img {
     object-fit: cover;
+    border-radius: 15px;
   }
 }
 
