--- a/src/pages/CategoriesPage/CategoriesPage.css
+++ b/src/pages/CategoriesPage/CategoriesPage.css
@@ -11,10 +11,11 @@
 }
 .categoriesPage__title {
   margin-top: 40px;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
 }
 .categoriesPage__title h1 {
   color: rgb(209, 38, 38);
+  font-size: 28px;
 }
 
 .categoriesPage__content {
