--- a/src/pages/CategoriesPage/CategoriesPage.css
+++ b/src/pages/CategoriesPage/CategoriesPage.css
@@ -59,12 +59,14 @@
   color: azure;
 }
 .categoriesPage__item--bottom {
-  background-color: rgb(255, 255, 255);
+  /* background-color: rgb(255, 255, 255); */
+
   padding: 10px 20px;
   height: 250px;
   overflow-y: scroll;
-  color: #3e3e3e;
-
+  /* color: #3e3e3e; */
+  color: #fff;
+  font-weight: 700;
   position: relative;
   z-index: 2;
 }
@@ -72,18 +74,23 @@
   bottom: 0;
   height: 100%;
   left: 0;
-  position: absolute;
-  top: 0;
+  position: fixed;
+  /* top: 0; */
   width: 100%;
   height: 250px;
   z-index: -1;
+  background: linear-gradient(
+    0deg,
+    rgba(55, 55, 55, 0.7),
+    rgba(55, 55, 55, 0.7)
+  );
 }
 .categoriesPage__bg img {
   display: block;
   width: 100%;
   height: 100%;
-  object-fit: contain;
-  opacity: 0.08;
+  object-fit: cover;
+  opacity: 0.3;
 }
 .categoriesPage__item--bottom ul {
   /* z-index: 10; */
