--- a/src/App.css
+++ b/src/App.css
@@ -10,8 +10,31 @@
   flex-direction: column;
   min-height: 100vh;
   position: relative;
-  background-color: #fafaf2;
+  /* background-color: #fafaf2; */
 }
+.appRouter__bg {
+  bottom: 0;
+  height: 100%;
+  left: 0;
+  position: fixed;
+  /* top: 0; */
+  width: 100%;
+  height: 100vh;
+  z-index: -1;
+  background: linear-gradient(
+    0deg,
+    rgba(55, 55, 55, 0.7),
+    rgba(55, 55, 55, 0.7)
+  );
+}
+.appRouter__bg img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  opacity: 1;
+}
+
 button {
   border-style: none;
   background-color: transparent;
