--- a/src/components/Main/Logo/Logo.css
+++ b/src/components/Main/Logo/Logo.css
@@ -1,6 +1,6 @@
 .logo {
-  background-color: #f4feff;
-  box-shadow: 0px 10px 16px rgba(0, 0, 0, 0.05);
+  /* background-color: #f4feff;
+  box-shadow: 0px 10px 16px rgba(0, 0, 0, 0.05); */
 
   width: 100%;
 }
@@ -15,6 +15,11 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px 0;
+}
+
+.swiper-container {
+  background-color: #f4feff;
+  box-shadow: 0px 10px 16px rgba(0, 0, 0, 0.05);
 }
 .logo__items {
   /* width: 150px; */
