--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
   flex-direction: column;
   min-height: 100vh;
   position: relative;
-  /* background-color: #fafaf2; */
+  background-color: #fafaf2;
 }
 .appRouter__bg {
   bottom: 0;
