--- a/src/components/Main/Banner/Banner.css
+++ b/src/components/Main/Banner/Banner.css
@@ -18,7 +18,7 @@
 }
 .banner__left {
   /* max-width: 790px; */
-  width: 65%;
+  width: 100%;
   height: 375px;
   /* background: url("../../../assets/images/new_design/banner_main.png"); */
   /* background-repeat: no-repeat;
@@ -38,14 +38,14 @@
   width: 65%;
    */
   width: 100%;
-  height: 375px;
+  height: 374px;
   position: relative;
 }
 .banner__left--img img {
   /* position: absolute; */
   width: 100%;
   height: 100%;
-  /* object-fit: cover; */
+  object-fit: cover;
 }
 .banner__btn {
   /* height: 100%; */
